[project]
name = "imdbayes"
version = "0.1.0"
description = "IMDbayes is a Data Science project that refuses to trust average ratings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
